--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Sugar Tracking App</title>
     <link rel="stylesheet" href="/styles/globals.css">
     <link rel="stylesheet" href="/src/index.css">
+    <link rel="stylesheet" href="/src/components/Dashboard.css">
 </head>
 
 <body>
